--- a/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-infrastructure/docker-compose.arm64.yml
+++ b/CKAN-Modernization-20250721/ckan-monorepo/ckan/test-infrastructure/docker-compose.arm64.yml
@@ -33,6 +33,7 @@ services:
       - default
     environment:
       HOME: /usr/src
+      ENV_SECRET_KEY: tUcaKt0kEj9gT0rVZJW-Suzp-qgdbQ3VbJvIFo8K4Ro
       CKAN_DATASTORE_POSTGRES_DB: datastore_test
       CKAN_DATASTORE_POSTGRES_READ_USER: datastore_read
       CKAN_DATASTORE_POSTGRES_READ_PWD: pass
